--- a/notebook/quick_look_layer2.ipynb
+++ b/notebook/quick_look_layer2.ipynb
@@ -36,7 +36,7 @@
     "import matplotlib.pyplot as plt\n",
     "import yaml\n",
     "from src.config import Config\n",
-    "from src.model import TFModel\n",
+    "from src.model.simpleTF import TFModel\n",
     "from src.data import gen_simple_data\n",
     "from src.utils import fix_random_seed, create_folder\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
